--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'se.emilsjolander:android-flipview:1.1.0'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
 }
